# GenAI-Multi_Doc_Chat

./: .gitignore  README.md  main.py  pyproject.toml  test.py
faiss_index/session_20251103_161946_fc249965/: index.pkl  ingested_meta.json
faiss_index/session_20251103_162651_bed27519/: index.faiss  index.pkl  ingested_meta.json
multi_doc_chat/src/document_ingestion/: data_ingestion.py
multi_doc_chat/utils/: document_ops.py
notebook/: RAG.ipynb  experiments.ipynb
