[project]
name = "genai-multi-doc-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi>=0.120.4",
    "ipykernel>=7.1.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.2",
    "langchain-google-genai>=3.0.0",
    "langchain-groq>=1.0.0",
    "langchain-openai>=1.0.1",
    "langchain-text-splitters>=1.0.0",
    "openai>=2.6.1",
    "pypdf>=6.1.3",
    "python-dotenv>=1.2.1",
    "rapidocr-onnxruntime>=1.4.4",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
]
